--- a/app/src/main/res/layout/slide_item.xml
+++ b/app/src/main/res/layout/slide_item.xml
@@ -13,7 +13,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:src="@drawable/ic_launcher_background"
-        android:scaleType="centerCrop" />
+        android:scaleType="fitCenter" />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
@@ -40,7 +40,7 @@
         app:srcCompat="@drawable/gradient_bg" />
     <TextView
         android:id="@+id/slide_title"
-        android:layout_width="0dp"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginLeft="24dp"
