--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -10,6 +10,7 @@
     tools:context=".SignInActivity">
 
     <EditText
+        android:id="@+id/txt_login_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
@@ -18,6 +19,7 @@
         android:maxLength="50"
         />
     <EditText
+        android:id="@+id/txt_login_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Password"
@@ -26,6 +28,7 @@
         android:imeOptions="actionDone"
         android:inputType="textPassword"/>
     <Button
+        android:id="@+id/btn_sign_in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sign In"/>
