--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -12,6 +12,9 @@
         <item android:id="@+id/nav_account"
             android:title="@string/nav_account"
             android:icon="@drawable/ic_account_circle_24"/>
+        <item android:id="@+id/nav_sign_out"
+            android:title="@string/nav_sign_out"
+            android:icon="@drawable/ic_logout_24"/>
 
     </group>
 </menu>
