--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -7,30 +7,58 @@
     android:orientation="vertical"
     android:padding="20dp"
     android:gravity="center"
-    tools:context=".SignInActivity">
+    tools:context=".SignInActivity"
+    android:background="@color/colorPrimaryDark"
+    >
 
+    <ImageView
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/popcorn" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:textColor="@color/bottom_nav_bg"
+        android:textSize="30sp"
+        android:layout_marginBottom="60dp" />
     <EditText
         android:id="@+id/txt_login_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
+        android:textColorHint="#b5bcc4"
         android:inputType="textEmailAddress"
         android:imeOptions="actionNext"
         android:maxLength="50"
+        android:drawableStart="@drawable/ic_email_24"
+        android:textColor="@color/white"
+        android:background="@drawable/cuustom_input"
+        android:padding="15dp"
+
         />
     <EditText
         android:id="@+id/txt_login_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Password"
+        android:textColorHint="#b5bcc4"
         android:maxLength="50"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:imeOptions="actionDone"
-        android:inputType="textPassword"/>
+        android:inputType="textPassword"
+        android:drawableStart="@drawable/ic_lock_24"
+        android:textColor="@color/white"
+        android:background="@drawable/cuustom_input"
+        android:padding="15dp"
+        />
     <Button
         android:id="@+id/btn_sign_in"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="17dp"
+        android:backgroundTint="@color/colorAccent"
         android:text="Sign In"/>
     <LinearLayout
         android:layout_width="match_parent"
@@ -43,7 +71,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Don't have an account?"
-            android:textSize="14sp"/>
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            />
         <TextView
             android:id="@+id/signup"
             android:layout_marginStart="20dp"
@@ -51,7 +81,7 @@
             android:layout_height="wrap_content"
             android:text="Sign Up"
             android:textSize="16sp"
-            android:textColor="#0E3EDA"
+            android:textColor="@color/colorAccent"
             android:textStyle="bold"
             />
     </LinearLayout>
