--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,13 +10,13 @@
     android:background="@color/colorPrimaryDark"
     tools:context=".SplashActivity">
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/ic_launcher" />
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/popcorn" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:textSize="30sp"
         android:layout_marginTop="15dp"
         android:textColor="@color/white"
         android:text="@string/app_name"/>
