--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -72,7 +72,7 @@
         android:layout_height="wrap_content"
         android:padding="17dp"
         android:backgroundTint="@color/colorAccent"
-        android:text="Sign In"/>
+        android:text="Sign Up"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
