--- a/app/src/main/res/layout/exo_playback_control_view.xml
+++ b/app/src/main/res/layout/exo_playback_control_view.xml
@@ -44,6 +44,14 @@
 
         <ImageButton android:id="@id/exo_next"
             style="@style/ExoMediaButton.Next"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/exo_fullscreen"
+
+            android:background="#CC000000"
+            android:src="@drawable/ic_fullscreen_24" />
+
 
     </LinearLayout>
 
